--- a/public/index.html
+++ b/public/index.html
@@ -426,7 +426,20 @@ function getLastMessage() {
 }
 
 
-newPostKey = firebase.database().ref()
+function getUserAvatar(UID) {
+
+  
+  
+  firebase.database().ref('/users/' + UID).once('value').then(function(snapshot) {
+  return snapshot.val().profile_picture;
+
+});
+
+
+
+}
+
+
 
 function getPost(){
 
